fix: top contact button z-index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body class="bg-indigo-900 h-full overflow-hidden">
-		<a href="mailto:info@dancinglightstudios.ca" class="bg-indigo-500 rounded-lg drop-shadow-lg px-3 py-2 text-white absolute top-2 right-2">
+		<a href="mailto:info@dancinglightstudios.ca" class="bg-indigo-500 rounded-lg drop-shadow-lg px-3 py-2 text-white absolute top-2 right-2 z-10">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
 				<path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375M21 12c0 4.556-4.03 8.25-9 8.25a9.764 9.764 0 01-2.555-.337A5.972 5.972 0 015.41 20.97a5.969 5.969 0 01-.474-.065 4.48 4.48 0 00.978-2.025c.09-.457-.133-.901-.467-1.226C3.93 16.178 3 14.189 3 12c0-4.556 4.03-8.25 9-8.25s9 3.694 9 8.25z" />
 			</svg>
@@ -53,7 +53,7 @@
 
 		<div class="absolute inset-2 flex flex-col justify-center">
 				<div class="capsized font-bold text-white text-6xl sm:text-8xl lg:text-10xl">
-					<span class="text-green-400">Education</span><br>is about<br>to <span class="text-sky-400">change</span>.
+					<span class="drop-shadow-4xl text-green-400">Education</span><br>is about<br>to <span class="text-sky-400">change</span>.
 				</div>
 		</div>
 
