--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		<div class="absolute inset-2 flex flex-col justify-center">
 				<div class="capsized font-bold text-white text-6xl sm:text-8xl lg:text-10xl">
-					<span class="text-green-400">Education</span><br>is about<br>to <span class="text-sky-400">change</span>.
+					<span class="text-green-400">Things</span><br>are about<br>to <span class="text-sky-400">change</span>.
 				</div>
 		</div>
 
