--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@ path: home
 
 <div class="capsized font-bold text-white p-4 text-6xl sm:text-8xl lg:text-10xl">
   <span class="text-green-400">Things</span>
-  <br>is about
+  <br>are about
   <br>to
   <span class="text-sky-400">change</span>.
 </div>
