--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ URL: https://dancinglightstudios.ca
 
 <header class="site-header">
 
-<link rel="stylesheet" href="https://dancinglightstudios.ca/site-demo/assets/css/site-nav.css">
+<link rel="stylesheet" href="https://dancinglightstudios.ca/site-demo/assets/css/site-nav.css?buster">
 
 <input class="mobile-nav-input" id="site-nav-toggle" type="checkbox" style="display: none;" />
 
