refactor: use css/js aggregation plugin

--- a/src/page-about.html
+++ b/src/page-about.html
@@ -3,10 +3,10 @@ layout: default
 permalink: /about/index.html
 title: About
 class: about
+css:
+  - page-about.css
 ---
 {% assign page = site.data.page-about %}
-
-<link rel="stylesheet" href="{{ '/assets/css/page-about.css' | prepend: site.baseurl }}">
 
 <div class="hero container--x">
 	<div class="separator--wrapper">
