--- a/src/page-home.html
+++ b/src/page-home.html
@@ -2,10 +2,10 @@
 permalink: /index.html
 layout: home
 class: home
+css:
+  - page-home.css
 ---
 {% assign page = site.data.page-home %}
-
-<link rel="stylesheet" href="{{ '/assets/css/page-home.css' | prepend: site.baseurl }}">
 
 <div class="hero container--x">
   <div class="hero__wrapper container--y">
