--- a/src/page-lbe.html
+++ b/src/page-lbe.html
@@ -3,10 +3,12 @@ layout: default
 permalink: /location-based-entertainment/index.html
 title: Location Based Entertainment
 class: lbe
+css:
+  - page-lbe.css
+js:
+  - masonry.js
 ---
 {% assign page = site.data.page-lbe %}
-
-<link rel="stylesheet" href="{{ '/assets/css/page-lbe.css' | prepend: site.baseurl }}">
 
 <div class="hero container--x">
 	<div class="separator--wrapper">
