--- a/src/page-pl.html
+++ b/src/page-pl.html
@@ -3,10 +3,12 @@ layout: default
 permalink: /physical-literacy/index.html
 title: Physical Literacy
 class: pl
+css:
+  - page-pl.css
+js:
+  - masonry.js
 ---
 {% assign page = site.data.page-pl %}
-
-<link rel="stylesheet" href="{{ '/assets/css/page-pl.css' | prepend: site.baseurl }}">
 
 <div class="hero container--x">
 	<div class="separator--wrapper">
