refactor: basecss and styleguide
Start unifying the css for consistency and maintainability.

--- a/src/_styleguide/branding.html
+++ b/src/_styleguide/branding.html
@@ -1,17 +1,18 @@
 <div>
   <p class="styleguide-label">Primary Branding</p>
 
-  <figure>
-    <img src="http://placehold.it/640x480"/>
-    <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</figcaption>
-  </figure>
+  <div class="primary-branding">
+    <img src="/assets/img/logo-light-gradient-circle.svg" alt="Dancing Light Studios" />
+  </div>
 </div>
 
 <div>
   <p class="styleguide-label">Secondary Branding</p>
 
-  <figure>
-    <img src="http://placehold.it/300x200"/>
-    <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</figcaption>
-  </figure>
+  <div class="secondary-branding">
+    <img src="/assets/img/logo-light-gradient.svg" alt="Dancing Light Studios" />
+    <img src="/assets/img/logo-light-flat.svg" alt="Dancing Light Studios" />
+    <img src="/assets/img/logo-light-greyoutline.svg" alt="Dancing Light Studios" />
+    <img src="/assets/img/logo-light-outlined.svg" alt="Dancing Light Studios" />
+  </div>
 </div>
