--- a/src/_styleguide/buttons.html
+++ b/src/_styleguide/buttons.html
@@ -11,8 +11,8 @@
   <p class="styleguide-label">Large Button</p>
 
   <div>
-    <button>Button</button>
-    <a href="javascript:void(0)">Hyperlink</a>
+    <button class="button button--large">Button</button>
+    <a class="button button--large" href="javascript:void(0)">Hyperlink</a>
   </div>
 </div>
 
@@ -20,16 +20,16 @@
   <p class="styleguide-label">Standard button</p>
 
   <div>
-    <button>Button</button>
-    <a href="javascript:void(0)">Hyperlink</a>
+    <button class="button">Button</button>
+    <a class="button" href="javascript:void(0)">Hyperlink</a>
   </div>
 </div>
 <div>
   <p class="styleguide-label">Mini button</p>
 
   <div>
-    <button>Button</button>
-    <a href="javascript:void(0)">Hyperlink</a>
+    <button class="button button--mini">Button</button>
+    <a class="button button--mini"href="javascript:void(0)">Hyperlink</a>
   </div>
 </div>
 
@@ -37,8 +37,23 @@
   <p class="styleguide-label">Small button</p>
 
   <div>
-    <button>Button</button>
-    <a href="javascript:void(0)">Hyperlink</a>
+    <button class="button button--small">Button</button>
+    <a class="button button--small" href="javascript:void(0)">Hyperlink</a>
+  </div>
+</div>
+
+<div>
+  <p class="styleguide-label">Icon button</p>
+
+  <div>
+    <button class="button">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-6 h-6" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M2 12a10 10 0 1 1 20 0 10 10 0 0 1-20 0zm14-2a1 1 0 1 0-2-1l-3 5-1-2a1 1 0 0 0-2 1l3 3a1 1 0 0 0 1-1l4-5z" clip-rule="evenodd"/></svg>
+      Button
+    </button>
+    <a class="button" href="javascript:void(0)">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-6 h-6" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M2 12a10 10 0 1 1 20 0 10 10 0 0 1-20 0zm14-2a1 1 0 1 0-2-1l-3 5-1-2a1 1 0 0 0-2 1l3 3a1 1 0 0 0 1-1l4-5z" clip-rule="evenodd"/></svg>
+      Hyperlink
+    </a>
   </div>
 </div>
 
@@ -46,7 +61,7 @@
   <p class="styleguide-label">Block button</p>
 
   <div>
-    <button>Button</button>
-    <a href="javascript:void(0)">Hyperlink</a>
+    <button class="button button--block">Button</button>
+    <a class="button button--block" href="javascript:void(0)">Hyperlink</a>
   </div>
 </div>
