--- a/src/page-pl.html
+++ b/src/page-pl.html
@@ -2,9 +2,9 @@
 layout: default
 permalink: /physical-literacy/index.html
 title: Physical Literacy
-class: pl
-css:
-  - page-pl.css
+# class: pl
+# css:
+# - page-pl.css
 js:
   - masonry.js
 ---
