--- a/src/_styleguide/lists.html
+++ b/src/_styleguide/lists.html
@@ -19,7 +19,6 @@
         <li>Nested unordered list item</li>
         <li>Nested unordered list item</li>
         <li>Nested unordered list item</li>
-        <li>Unordered list item</li>
       </ul>
     </li>
   </ul>
@@ -38,6 +37,20 @@
 </div>
 
 <div>
+  <p class="styleguide-label">Nested Ordered list</p>
+  <ol>
+    <li>Ordered list item</li>
+    <li>Parent with children
+      <ul>
+        <li>Nested unordered list item</li>
+        <li>Nested unordered list item</li>
+        <li>Nested unordered list item</li>
+      </ul>
+    </li>
+  </ol>
+</div>
+
+<div>
   <p class="styleguide-label">Definition List</p>
   <dl>
     <dt>Lorem ipsum dolor sit amet
@@ -50,10 +63,20 @@
 
 <div>
   <p class="styleguide-label">Inline Definition List</p>
-  <dl>
+  <dl class="list--title-inline">
     <dt>Published</dt>
-    <dd>Smashing Magazine</dd>
-    <dd>2015</dd>
+    <dd>Example Magazine 2015</dd>
+    <dt>ISBN (EPUB)</dt>
+    <dd>978-3-945749-35-7</dd>
+    <dt>ISBN (KINDLE)</dt>
+    <dd>978-3-945749-36-4</dd>
+    <dt>ISBN (Print)</dt>
+    <dd>978-3-945749-37-1</dd>
+  </dl>
+
+  <dl class="list--inline">
+    <dt>Published</dt>
+    <dd>Example Magazine 2015</dd>
     <dt>ISBN (EPUB)</dt>
     <dd>978-3-945749-35-7</dd>
     <dt>ISBN (KINDLE)</dt>
@@ -63,12 +86,3 @@
   </dl>
 </div>
 
-<div>
-  <p class="styleguide-label">Inline List</p>
-  <ul>
-    <li><a href="javascript:void(0)">About</a></li>
-    <li><a href="javascript:void(0)">Contact</a></li>
-    <li><a href="javascript:void(0)">Privacy</a></li>
-    <li><a href="javascript:void(0)">Terms and conditions</a></li>
-  </ul>
-</div>
