refactor: career pages

--- a/src/page-careers.html
+++ b/src/page-careers.html
@@ -17,44 +17,48 @@ class: careers
 
 {% capture body %}
 <article class="content">
+	<div>
 	{{ page.body | markdownify }}
+	</div>
 
-	{% if site.careers.size < 1 %}
-	<section class="not-hiring">
-		<h2>We're not currently hiring, but&hellip;</h2>
+	<aside>
+		{% if site.careers.size < 1 %}
+		<section class="not-hiring">
+			<h2>We're not currently hiring, but&hellip;</h2>
 
-		{{ page.no_posts }}
-	</section>
-	{% else %}
-	<section class="listings">
-		<h2>Open Postings</h2>
-		{% for career in site.careers %}
-		<div class="listing">
-			<a href="{{ career.url }}">{{ career.title }}</a>
-			<ul class="position-details">
-				<li>{{ career.level }}
-					<li>{{ career.salary }}
-						<li>{{ career.location }}
-			</ul>
-		</div>
-		{% endfor %}
-	</section>
-	{% endif %}
+			{{ page.no_posts | markdownify }}
+		</section>
+		{% else %}
+		<section class="listings">
+			<h2>Open Postings</h2>
+			{% for career in site.careers %}
+			<div class="listing">
+				<a href="{{ career.url }}">{{ career.title }}</a>
+				<ul class="position-details"
+					<li>{{ career.level }}</li>
+					<li>{{ career.salary }}</li>
+					<li>{{ career.location }}</li>
+				</ul>
+			</div>
+			{% endfor %}
+		</section>
+		{% endif %}
 
-	<section class="cta">
-		<h2>How To Apply</h2>
-		{{ page.job_post_how_to_apply | markdownify }}
+		<section class="cta">
+			<h2>How To Apply</h2>
+			{{ page.job_post_how_to_apply | markdownify }}
 
-		<div>
-			<a href="#" class="button button--apply">Apply Now</a>
-			<a href="#" class="button button--linkedin">
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M100 448H7V149h93zM54 108C24 108 0 84 0 54a54 54 0 0 1 108 0c0 29-25 54-54 54zm394 340h-93V302c0-34 0-79-48-79s-56 38-56 77v148h-93V149h90v41h1c12-24 43-49 88-49 94 0 111 62 111 143v164z"/></svg>
-				<span>LinkedIn</span>
-			</a>
-		</div>
-	</section>
+			<div>
+				<a href="#" class="button button--apply">Apply Now</a>
+				<a href="https://www.linkedin.com/company/dancinglightstudios/jobs/" target="_blank" class="button button--linkedin">
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M100 448H7V149h93zM54 108C24 108 0 84 0 54a54 54 0 0 1 108 0c0 29-25 54-54 54zm394 340h-93V302c0-34 0-79-48-79s-56 38-56 77v148h-93V149h90v41h1c12-24 43-49 88-49 94 0 111 62 111 143v164z"/></svg>
+					<span>LinkedIn</span>
+				</a>
+			</div>
+		</section>
+	</aside>
 </article>
 {% endcapture %}
 
-{% include components/separator.html content=hero start=true end=true class="hero" %}
+{% include components/separator.html content=hero start=false end=true class="hero" %}
 {% include components/separator.html content=body start=true end=true class="body" %}
