--- a/src/page-about.html
+++ b/src/page-about.html
@@ -8,67 +8,45 @@ css:
 ---
 {% assign page = site.data.page-about %}
 
-<div class="hero container--x">
-	<div class="separator--wrapper">
-		<div class="container--y">
-			<header class="header">
-				<h1 class="header__heading">{{ page.header }}</h1>
-				<p class="header__subheading">{{ page.subheader }}</p>
-			</header>
+{% capture hero-header %}
+<header class="header">
+	<h1 class="header__heading">{{ page.header }}</h1>
+	<p class="header__subheading">{{ page.subheader }}</p>
+</header>
+{% endcapture %}
+
+{% include components/separator.html content=hero-header start=false end=true class='hero' %}
+
+{% capture body %}
+	<blockquote>
+		{{ page.body | markdownify }}
+	</blockquote>
+
+	<div class="values">
+		{% for value in page.values %}
+		<div class="value">
+			<h2>{{ value.title }}</h2>
+			{{ value.body | markdownify }}
 		</div>
+		{% endfor %}
 	</div>
+{% endcapture %}
 
-	<div class="separator--block-end">
-		{% include components/corner-left-bottom.svg %}
-	</div>
-</div>
+{% include components/separator.html content=body start=true end=true class='body' %}
 
-<div class="values container--x">
-	<div class="separator--block-start">
-		{% include components/corner-left-top.svg %}
-	</div>
-
-	<div class="separator--wrapper">
-		<div class="container--y">
-			<div class="content">
-				{% for value in page.values %}
-				<div class="value">
-					<h2>{{ value.title }}</h2>
-					{{ value.body | markdownify }}
-				</div>
-				{% endfor %}
+{% capture leadership %}
+<div class="content--leadership">
+	{% for staff_member in page.leadership %}
+		{% for site_staff_member in site.staff_members %}
+			{% if staff_member.staff== site_staff_member.name %}
+			<div class="leader">
+				<h2>{{ site_staff_member.name }}</h2>
+				<p>{{ site_staff_member.title }}, {{ site_staff_member.content }}</p>
 			</div>
-		</div>
-	</div>
-
-	<div class="separator--block-end">
-		{% include components/corner-right-bottom.svg %}
-	</div>
+			{% endif %}
+		{% endfor %}
+	{% endfor %}
 </div>
+{% endcapture %}
 
-<div class="leadership container--x red">
-	<div class="separator--block-start">
-		{% include components/corner-right-top.svg %}
-	</div>
-
-	<div class="separator--wrapper">
-		<div class="container--y">
-			<div class="content">
-				{% for staff_member in page.leadership %}
-					{% for site_staff_member in site.staff_members %}
-						{% if staff_member.staff== site_staff_member.name %}
-						<div class="leader">
-							<h2>{{ site_staff_member.name }}</h2>
-							<p>{{ site_staff_member.title }}, {{ site_staff_member.content }}</p>
-						</div>
-						{% endif %}
-					{% endfor %}
-				{% endfor %}
-			</div>
-		</div>
-	</div>
-
-	<div class="separator--block-end">
-		{% include components/corner-right-bottom.svg %}
-	</div>
-</div>
+{% include components/separator.html content=leadership start=true end=true class='leadership' %}
