--- a/src/page-careers.html
+++ b/src/page-careers.html
@@ -8,70 +8,53 @@ class: careers
 
 <link rel="stylesheet" href="/assets/css/page-careers.css">
 
-<div class="hero container--x">
-	<div class="separator--wrapper">
-		<div class="container--y">
-			<header class="header">
-				<h1 class="header__heading">{{ page.title }}</h1>
-				<p class="header__subheading">{{ page.subheader }}</p>
-			</header>
+{% capture hero %}
+<header class="header">
+	<h1 class="header__heading">{{ page.title }}</h1>
+	<p class="header__subheading">{{ page.subheader }}</p>
+</header>
+{% endcapture %}
+
+{% capture body %}
+<article class="content">
+	{{ page.body | markdownify }}
+
+	{% if site.careers.size < 1 %}
+	<section class="not-hiring">
+		<h2>We're not currently hiring, but&hellip;</h2>
+
+		{{ page.no_posts }}
+	</section>
+	{% else %}
+	<section class="listings">
+		<h2>Open Postings</h2>
+		{% for career in site.careers %}
+		<div class="listing">
+			<a href="{{ career.url }}">{{ career.title }}</a>
+			<ul class="position-details">
+				<li>{{ career.level }}
+					<li>{{ career.salary }}
+						<li>{{ career.location }}
+			</ul>
 		</div>
-	</div>
+		{% endfor %}
+	</section>
+	{% endif %}
 
-	<div class="separator--block-end">
-		{% include components/corner-left-bottom.svg %}
-	</div>
-</div>
+	<section class="cta">
+		<h2>How To Apply</h2>
+		{{ page.job_post_how_to_apply | markdownify }}
 
-<div class="body container--x">
-	<div class="separator--block-start">
-		{% include components/corner-left-top.svg %}
-	</div>
-
-	<div class="separator--wrapper">
-		<div class="container--y">
-			<article class="content">
-				{{ page.body | markdownify }}
-
-				{% if site.careers.size < 1 %}
-				<section class="not-hiring">
-					<h2>We're not currently hiring, but&hellip;</h2>
-
-					{{ page.no_posts }}
-				</section>
-				{% else %}
-				<section class="listings">
-					<h2>Open Postings</h2>
-					{% for career in site.careers %}
-					<div class="listing">
-						<a href="{{ career.url }}">{{ career.title }}</a>
-						<ul class="position-details">
-							<li>{{ career.level }}
-							<li>{{ career.salary }}
-							<li>{{ career.location }}
-						</ul>
-					</div>
-					{% endfor %}
-				</section>
-				{% endif %}
-
-				<section class="cta">
-					<h2>How To Apply</h2>
-					{{ page.job_post_how_to_apply | markdownify }}
-
-					<div>
-						<a href="#" class="button button--apply">Apply Now</a>
-						<a href="#" class="button button--linkedin">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc.--><path d="M100 448H7V149h93zM54 108C24 108 0 84 0 54a54 54 0 0 1 108 0c0 29-25 54-54 54zm394 340h-93V302c0-34 0-79-48-79s-56 38-56 77v148h-93V149h90v41h1c12-24 43-49 88-49 94 0 111 62 111 143v164z"/></svg>
-							<span>LinkedIn</span>
-						</a>
-					</div>
-				</section>
-			</article>
+		<div>
+			<a href="#" class="button button--apply">Apply Now</a>
+			<a href="#" class="button button--linkedin">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M100 448H7V149h93zM54 108C24 108 0 84 0 54a54 54 0 0 1 108 0c0 29-25 54-54 54zm394 340h-93V302c0-34 0-79-48-79s-56 38-56 77v148h-93V149h90v41h1c12-24 43-49 88-49 94 0 111 62 111 143v164z"/></svg>
+				<span>LinkedIn</span>
+			</a>
 		</div>
-	</div>
+	</section>
+</article>
+{% endcapture %}
 
-	<div class="separator--block-end">
-		{% include components/corner-right-bottom.svg %}
-	</div>
-</div>
+{% include components/separator.html content=hero start=true end=true class="hero" %}
+{% include components/separator.html content=body start=true end=true class="body" %}
