fix: lbe points on homepage

--- a/src/page-home.html
+++ b/src/page-home.html
@@ -83,7 +83,7 @@ css:
     <p class="content-card__content">{{ page.lbe-text }}</p<
 
     <dl class="content-card__list">
-      {% for point in page.pl-points %}
+      {% for point in page.lbe-points %}
       <div class="content-card__list-wrapper">
         <dt class="content-card__list-title">
         {% if point.icon %} {% capture icon
