chore: add alt text to logos

--- a/src/page-home.html
+++ b/src/page-home.html
@@ -17,9 +17,9 @@ css:
 </header>
 
 <div class="hero__art">
-  <img src="/assets/img/hero-layer-1.svg" class="layer-1" />
-  <img src="/assets/img/hero-layer-1.svg" class="layer-2" />
-  <img src="/assets/img/hero-layer-2.svg" class="layer-3" />
+  <img src="/assets/img/hero-layer-1.svg" alt="The Dancing Light Studios logo in full colour" class="layer-1" />
+  <img src="/assets/img/hero-layer-1.svg" alt="The Dancing Light Studios logo in full colour" class="layer-2" />
+  <img src="/assets/img/hero-layer-2.svg" alt="The Dancing Light Studios logo in full colour" class="layer-3" />
 </div>
 {% endcapture %}
 
