deploy: dd40dbbc6e89509d4204c42149bffdde05a09d70

--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@ URL: https://dancinglightstudios.ca
 </header>
 
 <div class="hero__art">
-  <img src="/assets/img/hero-layer-1.svg" class="layer-1" />
-  <img src="/assets/img/hero-layer-1.svg" class="layer-2" />
-  <img src="/assets/img/hero-layer-2.svg" class="layer-3" />
+  <img src="/assets/img/hero-layer-1.svg" alt="The Dancing Light Studios logo in full colour" class="layer-1" />
+  <img src="/assets/img/hero-layer-1.svg" alt="The Dancing Light Studios logo in full colour" class="layer-2" />
+  <img src="/assets/img/hero-layer-2.svg" alt="The Dancing Light Studios logo in full colour" class="layer-3" />
 </div>
 
 		</div>
@@ -370,7 +370,7 @@ URL: https://dancinglightstudios.ca
     
   </div>
 
-  <img class="image--card" src="https://dancinglightstudios.ca/images/uploads/gregdaynes_a_gynasium_of_kids_playing_a_game_of_floor_is_lava_b34fa2a7-feaf-4780-9042-9950a11b16ff.jpg" alt="pl image" />
+  <img class="image--card" src="https://dancinglightstudios.ca/images/uploads/an_artists_rendition_of_kids_playing_a_game_of_floor_is_lava.webp" alt="Kids playing "the floor is lava" - The lava is lit from beneath using yellow/orange LEDs, covered in rubber and texture to give the appearance of magma flows." />
 </div>
 
 		</div>
@@ -452,7 +452,7 @@ URL: https://dancinglightstudios.ca
     
   </div>
 
-  <img class="image--card" src="https://dancinglightstudios.ca/images/uploads/gregdaynes_a_small_group_of_people_on_a_field_trip_standing_in__03a1300c-36b4-467b-a563-684fec6e4b52.jpg" alt="lbe image" />
+  <img class="image--card" src="https://dancinglightstudios.ca/images/uploads/a_small_group_of_kids_on_a_field_trip_at_immersive_egyption_display.webp" alt="4 Kids of varying ages stand in an immersive exhibit with real sand floors, surrounded by a digital screen that has a holographic representation of a pyramid." />
 </div>
 
 		</div>
@@ -504,19 +504,19 @@ URL: https://dancinglightstudios.ca
   </div>
 
   <div class="art">
-    <img class="image--card" src="https://dancinglightstudios.ca/images/uploads/gregdaynes_extremely_detailed_exihibition_hall_for_a_trade_show_abeeb4ca-8913-4e1d-9af6-8471f51be851.jpg" alt="Hello 1" />
+    <img class="image--card" src="https://dancinglightstudios.ca/images/uploads/trade_show_meetup_with_pannelled_glass.webp" alt="A trade show meetup area surrounded by translucent coloured glass panels to give the feeling of being in a hologram." />
   </div>
 
   <div class="art">
-    <img class="image--card" src="/images/uploads/gregdaynes_extremely_detailed_3_people_wearing_vr_headsets_stan_c032d290-756e-4b3f-a174-984c0cb79aab.jpg" alt="Hello 2" />
+    <img class="image--card" src="/images/uploads/a_pair_of_people_witnessing_a_scene_in_vr.webp" alt="Two people experiencing a stylistic forest animal scene in VR. The Rendering is imposed around them to provide a representation of what the VR experience is." />
   </div>
 
   <div class="art">
-    <img class='image--card' src="https://dancinglightstudios.ca/images/uploads/gregdaynes_museum_exhibit_of_wild_animals_in_augmented_reality_8df01a76-5683-4eac-a3a6-f64a575771f5.jpg" alt="Hello 3" />
+    <img class='image--card' src="https://dancinglightstudios.ca/images/uploads/extended_information_on_tablet_about_a_lion.webp" alt="2 people in a dimly lit taxidermy exhibit of a lion, using a tablet to see more details about the exhibit through short film on the lion kingdom." />
   </div>
 
   <div class="art">
-    <img class="image--card" src="https://dancinglightstudios.ca/images/uploads/gregdaynes_museum_exhibit_of_an_pirate_ship_with_people_looking_7a5e34c1-c9e2-40db-a3bd-7f964b7e5677.jpg" alt="Hello 4" />
+    <img class="image--card" src="https://dancinglightstudios.ca/images/uploads/two_people_using_ar_to_see_a_boat.webp" alt="Two youths using AR headsets to bring a boat exhibit to life." />
   </div>
 </div>
 
