chore: update styleguide

--- a/src/_styleguide/buttons.html
+++ b/src/_styleguide/buttons.html
@@ -24,6 +24,15 @@
     <a class="button" href="javascript:void(0)">Hyperlink</a>
   </div>
 </div>
+
+<div>
+  <p class="styleguide-label">Standard button--link</p>
+
+  <div>
+    <a class="button button--link" href="javascript:void(0)">Hyperlink</a>
+  </div>
+</div>
+
 <div>
   <p class="styleguide-label">Mini button</p>
 
