chore: cleanup campfire

--- a/src/page-campfire.html
+++ b/src/page-campfire.html
@@ -1,5 +1,7 @@
 ---
 title: Campfire
+subheader: >-
+  Share Stories & Learn Along with Dancing Light Studios
 layout: default
 permalink: /campfire
 class: campfire
@@ -39,7 +41,7 @@ css:
       {{ post.excerpt | markdownify }}
 
       <footer class="post-card__footer">
-        <a href="{{ post.url }}" class="post-card__link">Continue reading {{ post.title }}</a>
+        <a href="{{ post.url }}" class="post-card__link button">Continue reading {{ post.title }}</a>
       </footer>
     </div>
 
